--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,8 @@
 [server]
 maxUploadSize = 1024
+enableCORS=false
+enableXsrfProtection=false
+maxMessageSize = 1024
 
 [global]
 dataFrameSerialization = "legacy"
