--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
         "codespaces": {
           "openFiles": [
             "README.md",
-            "Chatbot.py"
+            "main.py"
           ]
         },
         "vscode": {
